# cflat

./: .gitignore  CMakeLists.txt  Cflat.g4  CflatBaseListener.cpp  CflatBaseListener.h  CflatBaseVisitor.cpp  CflatLexer.cpp  CflatLexer.h  CflatLexer.tokens  CflatListener.h  CflatVisitor.cpp  CflatVisitor.h  Cflatlexer.g4  README.md  main.cpp
import/: dlfcn.hb
import/loadtest/: a.hb  b.hb
import/loadtest/hello/fuck/: shit.hb
src/: CMakeLists.txt  cflat.vcxproj  cflat.vcxproj.filters  cmake_install.cmake  main.cpp
src/compiler/: Compiler.cpp  Compiler.h  DeclarationResolver.h  Declarations.h  DereferenceChecker.h  IRGenerator.h  ImportResolver.cpp  ImportResolver.h  LibraryLoader.h  Resolver.h  TypeChecker.h  TypeResolver.h  Visitor.h
src/entity/: Entity.h  Function.h  Parameter.h  Scope.h  Variable.h
src/exception/: CompileException.h
src/parser/: CMakeLists.txt  Cflat.g4  Cflat.interp  Cflat.tokens  CflatBaseListener.cpp  CflatBaseListener.h  CflatBaseVisitor.cpp  CflatBaseVisitor.h  CflatLexer.cpp  CflatLexer.h  CflatLexer.interp  CflatLexer.tokens  CflatListener.cpp  CflatListener.h  CflatParser.cpp  CflatParser.h  CflatVisitor.h  Cflatlexer.g4
src/type/: ArrayType.h  CompositeType.h  ConstType.h  FloatType.h  FunctionType.h  IntegerType.h  PointerType.h  StructType.h  Type.h  TypeRef.h  TypeTable.h  UnionType.h  UserType.h  VoidType.h
test/: CMakeLists.txt  abc.cb  error.cb  load.cb
